--- a/contact.html
+++ b/contact.html
@@ -455,7 +455,7 @@
 
               <div class="col-md-3 col-sm-12 col-xs-12">
                 <div class="widget footer-about-us">
-                  <img src="img/logo_dark.png" alt="" class="logo">
+                  <img src="img/logo.avif" alt="" class="logo">
                   <p class="mb-30">Hats off Accessories Shop is a very slick and clean eCommerce platform.</p>
                   <div class="footer-socials">
                     <div class="social-icons nobase">
