--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                 <div class="logo-container">
                   <div class="logo-wrap">
                     <a href="index.html">
-                      <img class="logo-dark" src="img/logo_dark.png" alt="logo">
+                      <img class="logo-dark" src="img/logo.avif" alt="logo">
                     </a>
                   </div>
                 </div>
