--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
             <div class="col-xs-4 col-xxs-12 mb-30 promo-banner">
               <a href="#">
-                <img src="https://img.freepik.com/free-photo/spring-portrait-young-woman-with-flowers_23-2151953428.jpg?semt=ais_hybrid&w=740" width="360" height="620" alt="">
+                <img src="https://img.freepik.com/premium-photo/portrait-wonderful-brunette-woman-with-wave-hair-posing-with-contrast-light-black-white-toning_172420-8878.jpg" width="360" height="620" alt="">
                 <div class="overlay"></div>
                 <div class="promo-inner valign">
                   <h2>for her</h2>
