--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
             <div class="col-xs-4 col-xxs-12 mb-30 promo-banner">
               <a href="#">
-                <img src="https://images.unsplash.com/photo-1597358371607-5987dd7da3d6?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGhhbmRiYWdzfGVufDB8fDB8fHww" width="360" height="620" alt="">
+                <img src="https://img.freepik.com/free-photo/still-life-say-no-fast-fashion_23-2149669608.jpg?ga=GA1.1.2073377446.1749121648&semt=ais_items_boosted&w=740" width="360" height="620" alt="">
                 <div class="overlay"></div>
                 <div class="promo-inner valign">
                   <h2>accessories</h2>
