--- a/404.html
+++ b/404.html
@@ -130,8 +130,7 @@
                   <ul class="nav navbar-nav">
 
                     <li class="dropdown">
-                      <a href="#">Home</a>
-                      <i class="fa fa-angle-down dropdown-trigger"></i>
+                      <a href="index.html">Home</a>
                     </li>
 
                     <li class="dropdown">
