--- a/faq.html
+++ b/faq.html
@@ -360,7 +360,7 @@
                   </div>
                   <div id="collapse-1" class="panel-collapse collapse in">
                     <div class="panel-body">
-                      Our Theme is a very slick and clean e-commerce template with endless possibilities. Creating an awesome website. Canna Theme is a very slick and clean e-commerce template with endless possibilities.
+                      You can track your delivery by following these steps: 1) Log in to your account on our website, 2) Go to "Order History", 3) Click on the specific order you want to track, 4) Click the "Track Order" button to see real-time delivery status. You'll also receive tracking updates via email once your order is dispatched.
                     </div>
                   </div>
                 </div>
@@ -372,7 +372,7 @@
                   </div>
                   <div id="collapse-2" class="panel-collapse collapse">
                     <div class="panel-body">
-                      We possess within us two minds. So far I have written only of the conscious mind. I would now like to introduce you to your second mind, the hidden and mysterious subconscious. Our subconscious mind contains such power and complexity that it literally staggers the imagination.And finally the subconscious is the mechanism through which thought impulses which are repeated regularly with feeling and emotion are quickened, charged. Our subconscious mind contains such power and complexity that it literally staggers the imagination.
+                      Your tracking number can be found in multiple places: 1) In the order confirmation email we sent you, 2) In your account under "Order History", 3) In the shipping confirmation email. The tracking number is usually a 12-15 digit number that starts with "HOA". If you can't find your tracking number, please contact our customer support.
                     </div>
                   </div>
                 </div>
@@ -384,7 +384,7 @@
                   </div>
                   <div id="collapse-3" class="panel-collapse collapse">
                     <div class="panel-body">
-                      We possess within us two minds. So far I have written only of the conscious mind. I would now like to introduce you to your second mind, the hidden and mysterious subconscious. Our subconscious mind contains such power and complexity that it literally staggers the imagination.And finally the subconscious is the mechanism through which thought impulses which are repeated regularly with feeling and emotion are quickened, charged. Our subconscious mind contains such power and complexity that it literally staggers the imagination.
+                      We offer several delivery methods to suit your needs: 1) Standard Delivery (3-5 business days), 2) Express Delivery (1-2 business days), 3) Same Day Delivery (available in select cities), 4) International Shipping (7-14 business days). Delivery charges vary based on your location and chosen method. Free shipping is available on orders above ₹2,999.
                     </div>
                   </div>
                 </div>
@@ -401,7 +401,7 @@
                   </div>
                   <div id="collapse-4" class="panel-collapse collapse in">
                     <div class="panel-body">
-                      Our Theme is a very slick and clean e-commerce template with endless possibilities. Creating an awesome website. Canna Theme is a very slick and clean e-commerce template with endless possibilities.
+                      We accept a wide range of payment methods for your convenience: Credit/Debit Cards (Visa, MasterCard, American Express), UPI, Net Banking, Digital Wallets (PayTM, PhonePe, Google Pay), and PayPal for international customers. All payments are processed through secure payment gateways to ensure your financial information is protected.
                     </div>
                   </div>
                 </div>
@@ -413,7 +413,7 @@
                   </div>
                   <div id="collapse-5" class="panel-collapse collapse">
                     <div class="panel-body">
-                      We possess within us two minds. So far I have written only of the conscious mind. I would now like to introduce you to your second mind, the hidden and mysterious subconscious. Our subconscious mind contains such power and complexity that it literally staggers the imagination.And finally the subconscious is the mechanism through which thought impulses which are repeated regularly with feeling and emotion are quickened, charged. Our subconscious mind contains such power and complexity that it literally staggers the imagination.
+                      Paying with a credit card is simple and secure: 1) Select "Credit Card" at checkout, 2) Enter your card number, expiry date, and CVV, 3) Enter the billing address associated with your card, 4) Verify the payment through OTP if required. We use SSL encryption to protect your card details. Your card information is never stored on our servers.
                     </div>
                   </div>
                 </div>
@@ -425,7 +425,7 @@
                   </div>
                   <div id="collapse-6" class="panel-collapse collapse">
                     <div class="panel-body">
-                      We possess within us two minds. So far I have written only of the conscious mind. I would now like to introduce you to your second mind, the hidden and mysterious subconscious. Our subconscious mind contains such power and complexity that it literally staggers the imagination.And finally the subconscious is the mechanism through which thought impulses which are repeated regularly with feeling and emotion are quickened, charged. Our subconscious mind contains such power and complexity that it literally staggers the imagination.
+                      We accept all major credit cards including: 1) Visa (Credit & Debit), 2) MasterCard (Credit & Debit), 3) American Express, 4) RuPay, 5) Discover. Both domestic and international cards are accepted. For international cards, currency conversion rates will be applied by your bank at the time of transaction.
                     </div>
                   </div>
                 </div>
@@ -437,7 +437,7 @@
                   </div>
                   <div id="collapse-7" class="panel-collapse collapse">
                     <div class="panel-body">
-                      We possess within us two minds. So far I have written only of the conscious mind. I would now like to introduce you to your second mind, the hidden and mysterious subconscious. Our subconscious mind contains such power and complexity that it literally staggers the imagination.And finally the subconscious is the mechanism through which thought impulses which are repeated regularly with feeling and emotion are quickened, charged. Our subconscious mind contains such power and complexity that it literally staggers the imagination.
+                      To pay using PayPal: 1) Select PayPal as your payment method at checkout, 2) Click "Proceed with PayPal", 3) Log in to your PayPal account if not already logged in, 4) Review the payment details and confirm the transaction. PayPal payments are processed instantly, and you'll receive confirmation from both PayPal and us.
                     </div>
                   </div>
                 </div>
